src/assets/css/main.css
html, body, #root {
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }

/* Common Variables */
:root {
    --primary-color: #03fc98;
    --primary-color-hover: #afffdf;
    --primary-text-color: #DCDCDC;
}

::selection {
    background-color: #dc1111;
}

.container {
    display: flex;
    justify-content: center;
    height: auto;
    overflow: show;;
}

.container--padding {
    padding-left: 0 1rem
}

.shadow {
    box-shadow:  0px 4px 8px rgba(0, 0, 0, 0.6);
}

.shadow:hover {
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.8);
    cursor: pointer;
}

/* Layout */

.main-grid {
    display: grid;
    grid-template-rows: 80% 1fr;
    grid-template-columns: 200px 1fr;
    grid-template-areas: 
        "sidebar main"
        "sidebar footer";
    height: 100vh;
    width: 100vw;
    overflow: auto;
}

.sidebar {
    grid-area: sidebar;
}

.main {
    grid-area: main;
    overflow: scroll;
    justify-items: center;
    align-content: center;
    scrollbar-width: none;
}

.main::-webkit-scrollbar {
    background-color: transparent;
    width: 0;
}

.footer {
    grid-area: footer;
}

@media screen and (max-width: 800px) {
    .main-grid {
        display: grid;
        grid-template-rows: 0.1fr auto auto;
        grid-template-columns: 1fr;
        grid-template-areas: 
            "sidebar"
            "main"
            "footer";
        overflow: scroll;
    }    
}

/* Sidebar */

.flex-bar {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 100px;
    height: 100%;
    border-right: 1px solid white;
}

@media screen and (max-width: 800px) {
    .flex-bar {
        display: flex;
        flex-direction: row;
        border-right: none;
        border-bottom: 1px solid white;
        gap: 30px
    }

    .sidebar-button {
        color: white;
        border-radius: 0;
        height: 100%;
        padding-top:10px;
        font-size: 1.2rem;
        width: 25%
    }
}

/* Work */

.work {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    align-items: stretch;
    row-gap: 1rem;
}

.work-card {
    width: 90%;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.6);
    transition: all 0.5s;
    padding-bottom: 10px;
    position: relative;
}

.work-card:hover {
    transform: translateY(-4px); 
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.8);
    cursor: pointer
}

.work-card__company {
    padding: 1rem;
    padding-bottom: 0;
}

.work-card__action {
    justify-content: center;
}

.work-card__description {
    line-height: 1.4rem;
    font-size: 0.9rem;
    color: var(--primary-text-color);
}

.work-card__points {
    font-size: 0.8rem;
}

.work-card__skills {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    padding: 0.2rem;
}

@media screen and (max-width: 800px) {
    .work {
        padding: 20px 0;
        grid-template-columns: 1fr;
        gap: 30px;
    }

    .work-card {
        height: 100%
    }
}

/* Footer */

.flex-footer {
    display: flex;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: space-between;
    padding: 1.5rem 1.5rem;
    border-top: 1px solid white;
}

.icon {
    cursor: pointer;
    transition: all 0.5s;
}

.icon:hover {
    transform: scale(1.2);
    color: var(--primary-color);
}
@media screen and (max-width: 800px) {
    .flex-footer {
        display: flex;
        width: 100%;
        height: 100%;
        padding-left: 5%;
        padding-right: 5%;
        align-items: center;
        border-top: 1px solid white;
        padding-top: 10px;
        padding-bottom: 10px;
    }    
}

/* Buttons */

.button-group {
    display: flex;
    flex-direction: column;
    row-gap: 10px
}

.button-group--horizontal {
    display: flex;
    column-gap: 10px;
}

.button {
    width: 155px;
    height: 45px;
    border-radius: 0;
    font-weight: bold;
    transition: all 0.3s;
    border-radius: 3px;  
}

.button:focus {
    outline: none
}

.button--primary {
    background-color: var(--primary-color);
    color: black;
}

.button--primary:hover {
    background-color: var(--primary-color-hover);
}

.button--git {
    background-color: black;
    color: white;
}

.button--git:hover {
    background-color: white;
    color: black;
}

.button--info {
    background-color: #dc1111;
    color: white
}

.button--info:hover {
    background-color: red;
}

.sidebar-button {
    color: white;
    border-radius: 0;
    height: 55px;
    padding-top:10px;
    transition: background-color 0.3s
}

.sidebar-button-active {
    background-color: var(--primary-color);
    color: black;
}

.sidebar-button:hover {
    background-color: var(--primary-color);
    cursor: pointer;
    color: black;
}

.sidebar-button::selection {
    background-color: var(--primary-color);
}

@media screen and (max-width: 800px) {
    .sidebar-button {
        height: 100%;
        font-size: 1.2rem;
        width: 25%
    }

    .button-group {
        display: flex;
        flex-direction: column;
        gap: 10px;
    }
}

/* Icons */

.contact-icons {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

@media screen and (max-width: 800px) {
    .contact-icons {
        gap: 10px
    }
}

/* Typography */

.heading-company {
    font-size: 1.5rem;
    line-height: 1;
    font-weight: 600;
}

.heading-position {
    margin-top: 0.2rem;
    font-size: 1rem;
    line-height: 1;
    font-weight: 600;
}

.heading-date {
    color: #929292;
    font-style: italic;
}

.about__heading .heading {
    font-weight: 800;
    font-size: 3rem;
}

.about__heading .title {
    font-weight: 500;
    margin: 0
}

.about__heading .intro {
    width: 60%;
    line-height: normal;
    color: var(--primary-text-color)
}

/* About */

.about {
    height: 100%;
    padding: 1rem;
    width: 100%;
    margin: 0 auto;
}

.about__heading {
    height: 100%;
}

.about__description {
    height: 100%;
    color: var(--primary-text-color);
    padding: 0 2rem;
}

.skills {
    display: flex;
}

.skill-paper {
    transition: all 0.2s;
}

.skill-paper:hover {
    cursor: pointer;
    transform: scale(1.1);
}

/* List */

.list {
    width: 50%;
    padding: 0;
    margin-top: 1rem;
}

.list__item {
    padding: 0
}

.list__item .text {
    color: var(--primary-text-color)
}

/* Projects */

.project {
    max-width: 1080px;
    overflow-x: scroll;
    scrollbar-width: none;
}

.project::-webkit-scrollbar {
    background-color: transparent
}

.project__grid {
    margin: 0 auto;
    align-items: center;
}

.project__desc__content {
    display: grid;
    grid-template-areas: 
        "project"
        "buttons";
    grid-template-rows: 250px auto;
}

.project__usage, .project__info {
    grid-area: project;
}

.project__info__text {
    line-height: 1.2rem;
    letter-spacing: 0.1rem;
    font-size: 1rem;
}

.project__buttons {
    grid-area: buttons;
}

.project__desc__data {
    overflow-y: hidden;
}

.project .project__img img {
    width: 100%;
}

.project:last-of-type {
    margin-bottom: 2rem;
}

.project .button {
    margin-bottom: 1rem;
    margin-top: 1rem;
}

.project .list {
    width: 100%;
}

.more-projects {
    width: 80%;
    margin: 1rem auto;
}
@media screen and (max-width:900px) {

    .project__desc, .project__info, .project__usage {
        margin-top: 0;
    }
}

.contact {
    max-width: 550px;
    margin: 0 auto;
    text-align: center;
    padding: 1rem
}

@media screen and (max-width: 800px) {
    .contact {
        width: 100%
    }
}

